--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,12 @@ override.tf.json
 
 # Include tfplan files to ignore the plan output of command: terraform plan -out=tfplan
 # example: *tfplan*
+
+planfile
+
+*.terraform.lock.hcl
+*.history/*
+.history/
+.history/*
+
+.DS_Store
